[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "classtree"
description = "A toolkit for hierarchical classification"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
keywords = ["classification", "hierarchical"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "torch",
    "torchvision",
    "torchtext",
    "Pillow",
    "tqdm",
    "fsspec",
    "gcsfs",
    "matplotlib"
]

[project.scripts]
classtree = "classtree.cli:run"

[tool.setuptools.dynamic]
version = {attr = "classtree.__version__"}

[tool.bandit]
skips = ["B101"]

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
